--- a/figures/Extended Data Figure 2/tex/Hist_Age_MYonset.tex
+++ b/figures/Extended Data Figure 2/tex/Hist_Age_MYonset.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.6 on 2025-12-22 09:59:31
+% Created by tikzDevice version 0.12.6 on 2025-12-23 10:13:04
 % !TEX encoding = UTF-8 Unicode
 \documentclass[10pt]{article}
 \usepackage{tikz}
@@ -20,106 +20,106 @@
 \path[clip] (  0.00,  0.00) rectangle (361.35,289.08);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (  0.00,  0.00) rectangle (361.35,289.08);
+\path[fill=fillColor] ( -0.00,  0.00) rectangle (361.35,289.08);
 \end{scope}
 \begin{scope}
-\path[clip] ( 60.35, 61.25) rectangle (331.35,254.84);
+\path[clip] ( 60.85, 62.24) rectangle (331.35,254.33);
 \definecolor{drawColor}{RGB}{0,0,0}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 1.7pt,fill=fillColor] ( 84.98, 70.05) rectangle (109.62, 80.01);
+\path[draw=drawColor,line width= 1.7pt,fill=fillColor] ( 85.44, 70.97) rectangle (110.03, 80.49);
 
-\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (109.62, 70.05) rectangle (134.26,109.90);
+\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (110.03, 70.97) rectangle (134.62,109.07);
 
-\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (134.26, 70.05) rectangle (158.89,139.78);
+\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (134.62, 70.97) rectangle (159.22,137.64);
 
-\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (158.89, 70.05) rectangle (183.53,176.31);
+\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (159.22, 70.97) rectangle (183.81,172.57);
 
-\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (183.53, 70.05) rectangle (208.17,186.27);
+\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (183.81, 70.97) rectangle (208.40,182.10);
 
-\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (208.17, 70.05) rectangle (232.80,246.04);
+\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (208.40, 70.97) rectangle (232.99,239.25);
 
-\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (232.80, 70.05) rectangle (257.44,172.99);
+\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (232.99, 70.97) rectangle (257.58,169.40);
 
-\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (257.44, 70.05) rectangle (282.08,126.50);
+\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (257.58, 70.97) rectangle (282.17,124.94);
 
-\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (282.08, 70.05) rectangle (306.71, 73.37);
+\path[draw=drawColor,line width= 1.7pt,fill=fillColor] (282.17, 70.97) rectangle (306.76, 74.14);
 
-\path[draw=drawColor,line width= 3.4pt,line join=round,line cap=round] ( 60.35, 61.25) rectangle (331.35,254.84);
+\path[draw=drawColor,line width= 3.4pt,line join=round,line cap=round] ( 60.85, 62.24) rectangle (331.35,254.33);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,289.08);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  1.70] at ( 49.15, 64.00) {0};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  1.70] at ( 49.65, 64.91) {0};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  1.70] at ( 49.15,130.41) {20};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  1.70] at ( 49.65,128.41) {20};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  1.70] at ( 49.15,196.82) {40};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  1.70] at ( 49.65,191.92) {40};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,289.08);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] ( 56.35, 70.05) --
-	( 60.35, 70.05);
+\path[draw=drawColor,line width= 2.3pt,line join=round] ( 56.85, 70.97) --
+	( 60.85, 70.97);
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] ( 56.35,136.46) --
-	( 60.35,136.46);
+\path[draw=drawColor,line width= 2.3pt,line join=round] ( 56.85,134.47) --
+	( 60.85,134.47);
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] ( 56.35,202.87) --
-	( 60.35,202.87);
+\path[draw=drawColor,line width= 2.3pt,line join=round] ( 56.85,197.97) --
+	( 60.85,197.97);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,289.08);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] ( 72.67, 57.25) --
-	( 72.67, 61.25);
+\path[draw=drawColor,line width= 2.3pt,line join=round] ( 73.15, 58.24) --
+	( 73.15, 62.24);
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] (134.26, 57.25) --
-	(134.26, 61.25);
+\path[draw=drawColor,line width= 2.3pt,line join=round] (134.62, 58.24) --
+	(134.62, 62.24);
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] (195.85, 57.25) --
-	(195.85, 61.25);
+\path[draw=drawColor,line width= 2.3pt,line join=round] (196.10, 58.24) --
+	(196.10, 62.24);
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] (257.44, 57.25) --
-	(257.44, 61.25);
+\path[draw=drawColor,line width= 2.3pt,line join=round] (257.58, 58.24) --
+	(257.58, 62.24);
 
-\path[draw=drawColor,line width= 2.3pt,line join=round] (319.03, 57.25) --
-	(319.03, 61.25);
+\path[draw=drawColor,line width= 2.3pt,line join=round] (319.05, 58.24) --
+	(319.05, 62.24);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,289.08);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at ( 72.67, 37.94) {0};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at ( 73.15, 38.92) {0};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at (134.26, 37.94) {25};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at (134.62, 38.92) {25};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at (195.85, 37.94) {50};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at (196.10, 38.92) {50};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at (257.44, 37.94) {75};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at (257.58, 38.92) {75};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at (319.03, 37.94) {100};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.70] at (319.05, 38.92) {100};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,289.08);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.80] at (121.22, 17.50) {\bfseries Age (All, \emph{N} = 191)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.80] at (121.47, 18.01) {\bfseries Age (All, \emph{N} = 191)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,289.08);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.80] at ( 22.74,158.04) {\bfseries Frequency};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.80] at ( 22.74,158.28) {\bfseries Frequency};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,289.08);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.80] at ( 60.35,266.34) {\bfseries Age at Myositis Onset};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.80] at (196.10,266.34) {\bfseries Age at Myositis Onset};
 \end{scope}
 \end{tikzpicture}
 
