--- a/figures/Extended Data Figure 4/tex/forest_plot_MGMM.tex
+++ b/figures/Extended Data Figure 4/tex/forest_plot_MGMM.tex
@@ -20,7 +20,7 @@
 \path[clip] (  0.00,  0.00) rectangle (722.70,252.94);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.44] at (13.10,204.79) {\bfseries \large e. Concurrent MG \& myositis/myocarditis (overall incidence: 112/493, 23\%)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.44] at (13.10,204.79) {\bfseries \large e Concurrent MG \& myositis/myocarditis (overall incidence: 112/493, 23\%)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (722.70,252.94);
