--- a/figures/Extended Data Figure 4/tex/forest_plot_MM.tex
+++ b/figures/Extended Data Figure 4/tex/forest_plot_MM.tex
@@ -20,7 +20,7 @@
 \path[clip] (  0.00,  0.00) rectangle (722.70,252.94);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.44] at ( 13.10,204.79) {\bfseries \large d. Concurrent myositis \& myocarditis (overall incidence: 135/493, 27\%)};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.44] at ( 13.10,204.79) {\bfseries \large d Concurrent myositis \& myocarditis (overall incidence: 135/493, 27\%)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (722.70,252.94);
