--- a/figures/Figure 1/tex/forest_plot_myocarditis.tex
+++ b/figures/Figure 1/tex/forest_plot_myocarditis.tex
@@ -20,7 +20,7 @@
 \path[clip] (  0.00,  0.00) rectangle (867.24,289.08);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.44] at (13.10,260.92) {\bfseries \large b. Myocarditis};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.44] at (13.10,260.92) {\bfseries \large b Myocarditis};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (867.24,289.08);
