--- a/figures/Figure 2/tex/forest_plot_striat_test.tex
+++ b/figures/Figure 2/tex/forest_plot_striat_test.tex
@@ -20,7 +20,7 @@
 \path[clip] (  0.00,  0.00) rectangle (867.24,252.94);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.44] at (13.10,224.79) {\bfseries \large b. Testing Bias for StrAbs};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  1.44] at (13.10,224.79) {\bfseries \large b Testing Bias for StrAbs};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (867.24,252.94);
